# Shortcut-CLI

./: .gitignore  AI-INSTRUCTIONS.md  Cargo.toml  FUTURE.md  LICENSE  README.md  STL_PROMPT.md  STL_SPEC.md  build.rs  gen-api.sh  stl-schema.json
.githooks/: pre-commit
.github/: renovate.json5
.github/workflows/: ci.yml  release.yml  version-tag.yml
examples/: minimal.shortcut.json  multiline-descriptions.shortcut.yml  parent-with-substories.sc.yml  parent-with-substories.shortcut.yml
scripts/: release.sh
spec/: shortcut.openapi.json
src/: api.rs  auth.rs  cli.rs  interactive.rs  lib.rs  main.rs  output.rs  project.rs
src/commands/: category.rs  completions.rs  custom_field.rs  doc.rs  epic.rs  epic_comment.rs  group.rs  init.rs  iteration.rs  label.rs  login.rs  member.rs  mod.rs  objective.rs  project.rs  search.rs  story.rs  story_comment.rs  story_link.rs  task.rs  workflow.rs
src/stl/: executor.rs  mod.rs  parser.rs  reconciler.rs  resolver.rs  state.rs  types.rs  validator.rs
tests/: api_test.rs  auth_test.rs  category.rs  category_test.rs  cli_template_sync_test.rs  completions_test.rs  custom_field.rs  custom_field_test.rs  doc.rs  doc_test.rs  epic.rs  epic_comment_test.rs  epic_test.rs  file_token_store_test.rs  group.rs  group_test.rs  iteration.rs  login_test.rs  member_test.rs  objective.rs  objective_test.rs  project_cmd.rs  project_cmd_test.rs  project_test.rs  search.rs  search_test.rs  stl.rs  story.rs  story_comment_test.rs  story_test.rs  task_test.rs  template.rs  workflow_test.rs
tests/category/: create.rs  delete.rs  get.rs  list.rs  milestones.rs  objectives.rs  update.rs
tests/custom_field/: get.rs  list.rs
tests/doc/: create.rs  delete.rs  epics.rs  get.rs  link.rs  list.rs  unlink.rs  update.rs
tests/epic/: comment.rs  create.rs  delete.rs  docs.rs  get.rs  list.rs  update.rs  (+1 more)
(+183 files in other folders)
