[package]
name = "sc"
version = "0.1.0"
edition = "2024"

[lib]
name = "sc"
path = "src/lib.rs"

[dependencies]
atty = "0.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "3"
dialoguer = "0.11"
progenitor-client = "0.11"
regress = "0.10"
reqwest = { version = "0.12", features = ["json", "stream"] }
rpassword = "7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[build-dependencies]
openapiv3 = "2"
prettyplease = "0.2"
progenitor = { version = "0.11", default-features = false }
serde_json = "1.0"
syn = "2.0"
